bin_PROGRAMS = main
main_SOURCES = \
    assembler.c \
    base/string.c \
    base/list.c \
    base/hash.c \
    base/utils.c \
    base/vector.c \
    ast.c \
    compiler.c \
    env.c \
    interpreter.c \
    lexer.c \
    main.c \
    object.c \
    op.c \
    parser.c \
    vm.c
main_CFLAGS = -Wall -Wextra -g -march=native -std=gnu99