bin_PROGRAMS = main
main_SOURCES = \
    assembler.c \
    base/string.c \
    base/list.c \
    base/hash.c \
    base/utf8.c \
    base/utils.c \
    base/vector.c \
    ast.c \
    compiler.c \
    env.c \
    lexer.c \
    main.c \
    object.c \
    op.c \
    parser.c \
    store.c \
    vm.c
main_CFLAGS = -Wall -Wextra -g -march=native -std=gnu99